# desktop

./: CLAUDE.md  README.md  index.html  package-lock.json  package.json
.github/workflows/: build.yml  update-cask.yml
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  capture.rs  config.rs  lib.rs  main.rs  state.rs  tray.rs  upload.rs  watcher.rs
