[package]
name = "pixelvault-desktop"
version = "0.2.0"
description = "Copy an image, paste a hosted URL — PixelVault menubar app"
authors = ["PixelVault"]
license = "MIT"
repository = "https://github.com/pixelvault-dev/desktop"
homepage = "https://pixelvault.dev"
edition = "2021"

[lib]
# The `_lib` suffix keeps the lib name distinct from the bin (Windows quirk).
name = "pixelvault_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
# Global hotkey for Mode B (active screen-region capture).
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Clipboard read/write (RGBA image in, text out). Used directly in the watcher
# thread instead of the Tauri clipboard plugin for a stable image API.
arboard = "3"
# Encode clipboard RGBA → PNG before upload.
image = { version = "0.25", default-features = false, features = ["png"] }
# Blocking multipart upload from the watcher thread. rustls to avoid OpenSSL.
reqwest = { version = "0.12", default-features = false, features = [
  "blocking",
  "multipart",
  "json",
  "rustls-tls",
] }
# OS-native secret storage for the signed-in API key (macOS Keychain / Linux
# secret-service via pure-Rust zbus, so no libsecret system dep for CI).
keyring = { version = "3", default-features = false, features = [
  "apple-native",
  "sync-secret-service",
  "crypto-rust",
] }
